--- a/DE1T4 Project.csproj
+++ b/DE1T4 Project.csproj
@@ -124,6 +124,9 @@
     <PackageReference Include="MetroSet_UI">
       <Version>2.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Data.Sqlite.Core">
+      <Version>6.0.6</Version>
+    </PackageReference>
     <PackageReference Include="SharpDX.MediaFoundation">
       <Version>4.2.0</Version>
     </PackageReference>
@@ -131,6 +134,7 @@
   <ItemGroup>
     <Content Include="Project Information.txt" />
     <Content Include="save.xml" />
+    <Content Include="saveFrame.txt" />
     <None Include="Resources\Asset 1.png" />
     <None Include="Resources\non-tick.png" />
     <None Include="Resources\tick.png" />
